# asset-insight

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/.omc/: project-memory.json
backend/.omc/state/: agent-replay-2e21abff-3ce2-4441-8638-704e867f5e8e.jsonl  subagent-tracking.json
backend/.omc/state/checkpoints/: checkpoint-2026-04-21T13-48-34-597Z.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_broker_account.py  0003_broker_account_credentials.py  0004_custom_asset.py  0005_investment_goal.py  0006_notification.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  redis.py
backend/app/models/: account_daily_summary.py  asset_snapshot.py  broker_account.py  custom_asset.py  investment_goal.py  notification.py  portfolio.py  position_snapshot.py
backend/app/scheduler/: jobs.py  notification_check.py  snapshot.py
backend/app/schemas/: custom_asset.py  goal.py  portfolio.py
backend/app/services/: broker_factory.py  notification.py  snapshot_writer.py
backend/app/services/analysis/: report.py  trend.py
backend/app/services/kis/: client.py  domestic.py  exchange_rate.py  overseas.py
backend/app/services/kiwoom/: balance.py  (+1 more)
backend/tests/: conftest.py  test_accounts.py  test_assets.py  test_goals.py  test_kiwoom.py  test_market.py  test_notifications.py  test_portfolio.py  test_realtime.py  test_report.py  test_snapshot.py  test_snapshot_save.py  test_tax.py  test_tax_calendar.py  test_trend.py
(+103 files in other folders)
